# Tietorakenteet-ja-algoritmit-harjoitustyo-2022

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: main.py
src/components/: certificate_module.py  key.py  prime_generator.py  private_key.py  public_key.py  rsa_key_generator.py
src/tests/: certificate_module_test.py  prime_generator_test.py  rsa_key_generator_test.py
src/tests/test_data/: list_of_composite_numbers.py  list_of_primes.py
src/ui/: main_view.py  new_certificate_view.py  new_rsakey_view.py  new_validation_view.py  ui.py
