[tool.poetry]
name = "tietorakenteet-ja-algoritmit-harjoitustyo-2022"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.3"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
